<resources>
    <string name="app_name">MToCP</string>
    <string name="full_app_name">Mobile terminal of collecting quality parameters</string>
    <string name="start_revision_text">Начать проверку</string>
    <string name="violation_catalog_string">Справочник</string>
    <string name="service_menu_string">Настройки</string>
    <string name="exit_text">Выход</string>
    <string name="help">Помощь</string>
    <string name="app_title">Мобильный терминал сбора контроллируемых параметров</string>
    <string name="main_menu_text">Главное меню</string>
    <string name="search_depot_hint">Поиск предприятия</string>
    <string name="search_train">Поиск поезда</string>
    <string name="train_number">Номер поезда</string>
    <string name="search_kri">Поиск вагона</string>
    <string name="ooops">Упс…</string>
    <string name="back_text">Назад</string>
    <string name="header_catalog">Классификатор</string>
    <string name="settings">Настройки</string>
    <string name="clean_dir_string">Очистить директории</string>
    <string name="load_catalog_string">Загрузить справочники</string>
    <string name="header_depot">Структурные подразделения</string>
    <string name="header_company">Перевозчики</string>
    <string name="search_company_hint">Поиск перевозчика</string>
    <string name="header_start_revision">Начало проверки</string>
    <string name="input_text_hint">Начните ввод</string>
    <string name="input_search_object_hint">Введите номер объекта проверки</string>
    <string name="label_choose_revtype">Тип проверки</string>
    <string name="order_number_hint">Номер уведомления</string>
    <string name="order_route_hint">Место проверки</string>
    <string name="order_start_date_hint">Дата/время начала</string>
    <string name="order_end_date_hint">Дата/время окончания</string>
    <string name="order_data_hint">Выберите тип проверки и заполните поля</string>
    <string name="menu_string">Меню</string>
    <string name="save_string">Сохранить</string>
    <string name="masters_object">Руководители объекта</string>
    <string name="revision_string">Мониторинг</string>
    <string name="add_string">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="worker_id">Табельный номер</string>
    <string name="worker_name">ФИО</string>
    <string name="worker_depot">Предприятие</string>
    <string name="delete">Удалить</string>
    <string name="new_worker">Новый работник</string>
    <string name="new_coach">Новый вагон</string>
    <string name="new_dinner">Новый вагон-ресторан</string>
    <string name="quality_passport">Паспорт качества</string>
    <string name="yes_string">Да</string>
    <string name="no_string">Нет</string>
    <string name="coach_number">Номер вагона</string>
    <string name="trailing_route">Маршрут вагона</string>
    <string name="object_number">Номер объекта проверки</string>
    <string name="trailing_string">Прицепной</string>
    <string name="coach_type">Тип вагона</string>
    <string name="order_text">Уведомление</string>
    <string name="route">Маршрут</string>
    <string name="scheme">Схема</string>
    <string name="object_data">Данные объекта</string>
    <string name="info">Информация</string>
    <string name="clear_text">Очистить</string>
    <string name="empty_string">Не может быть пустым</string>
    <string name="dinner_department">Дирекция питания</string>
    <string name="dinner_departments">Дирекции питания</string>
    <string name="dinner_company">Арендатор</string>
    <string name="dinner_add">Добавить ВР</string>
    <string name="dinner_remove">Удалить ВР</string>
    <string name="request_string">Запрос</string>
    <string name="web_request_string">WEB-запросы</string>
    <string name="ok_string">OK</string>
    <string name="doc_number_string">Номер акта</string>
    <string name="ask_exit_string">Вы уверены, что хотите выйти?</string>
    <string name="ask_continue_string">Вы уверены, что хотите продолжить?</string>
    <string name="warning_unsaved_data">Несохраненные данные будут утеряны.</string>
    <string name="warning_unchange_data">Дальнейшее изменение данных будет невозможно.</string>
    <string name="parallel_selection_string">Не могут быть выбраны одновременно</string>
    <string name="completed">Выполнено</string>
    <string name="not_completed">Не выполнено</string>
    <string name="no_data">Нет данных</string>
    <string name="checked">Проверен</string>
    <string name="uncheked">Не проверен</string>
    <string name="main_info_block_string">Основная информация</string>
    <string name="static_block_string">Статистическая информация</string>
    <string name="progress_using">Применение прогрессивных нормы</string>
    <string name="cctv_using">Наличие видеорегистратора</string>
    <string name="dinner_going">Проверка ВР/ВБ</string>
    <string name="additional_params_checked">Проверка дополнительных параметров</string>
    <string name="return_home_screen">Вы вернетесь на первоначальный экран.</string>
    <string name="addition_params_string">Параметры</string>
    <string name="resolved">Устранено</string>
    <string name="add_photo">Добавить фото</string>
    <string name="add_video">Добавить видео</string>
    <string name="change_value">Изменить количество</string>
    <string name="add_tag">Добавить признак</string>
    <string name="unresolved">Не устранено</string>
    <string name="crew">Данные работника</string>
    <string name="violations">Нарушения</string>
    <string name="incorrect_value">Некорректное значение</string>
    <string name="new_value">Новое значение</string>
    <string name="input_new_value">Введите новое значение</string>
    <string name="res_result_string">Результаты проверки</string>
    <string name="res_main">Основное</string>
    <string name="send">Отправить</string>
    <string name="report">Отчет</string>
    <string name="report_share">Отправить</string>
    <string name="res_violations_count">Всего нарушений</string>
    <string name="res_coach_checked">Проверено вагонов</string>
    <string name="res_violations_list">Список нарушений</string>
    <string name="res_main_car">Основной состав</string>
    <string name="res_trailing_car">Прицепная группа</string>
    <string name="res_stat_coaches">Вагоны</string>
    <string name="additional">Дополнительно</string>
    <string name="zip_data">ZIP</string>
    <string name="full_violation_list">Полный список нарушений</string>
    <string name="depot_string">Предприятие</string>
    <string name="worker">Работник</string>
    <string name="revision_start">Начало</string>
    <string name="revision_end">Окончание</string>
    <string name="unchecked_coaches">Есть непроверенные вагоны</string>
    <string name="unchecked_params">Не проверены дополнительные параметры</string>
    <string name="params_coach">Вагоны</string>
    <string name="params_train">Состав</string>
    <string name="export_data">Передача данных</string>
    <string name="additional_params">Прочие параметры</string>
    <string name="trains">Поезда</string>
    <string name="kri">КРИ</string>
    <string name="train_revision">Проверка поезда</string>
    <string name="ticket_office_revision">Проверка билетных касс</string>
    <string name="coach_revision">Проверка вагонов</string>
    <string name="nfc_receiver">Получаю данные…</string>
    <string name="nfc_sender">Отправляю данные…</string>
    <string name="nfc_file_received">Данные получены</string>
    <string name="nfc_help_info">Отправка данных по NFC. Приложите телефон к NFC-модулю другого телефона</string>
    <string name="title_activity_register">MToCP</string>
    <string name="login_button">ВОЙТИ</string>
    <string name="login">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="remember">Запомнить</string>
    <string name="welcome">Здравствуйте!</string>
    <string name="greeting_message">Пожалуйста, введите имя пользователя и пароль для начала работы</string>
    <string name="show_password">Показать пароль</string>
    <string name="login_length">Логин содержит мало символов</string>
    <string name="password_length">Пароль содержит мало символов</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="settings_main">Основные</string>
    <string name="settings_personal">Пользовательские</string>
    <string name="change_password">Изменить пароль</string>
    <string name="settings_share">Общие</string>
    <string name="about_app">О приложении</string>
    <string name="username">Пользователь</string>
    <string name="user_id">Табельный номер</string>
    <string name="user_sec_id">Открытый лист</string>
    <string name="clear_dirs_sub">Очистка программных директорий</string>
    <string name="update_catalog_sub">Обновить программные справочники из файла</string>
    <string name="notifications">Уведомления</string>
    <string name="notifications_sub">Управление настройкамми уведомления</string>
    <string name="del_profile">Выход</string>
    <string name="del_profile_sub">Выйти из профиля</string>
    <string name="depot_warning">Обязательно обращайте внимание на пункт формирования поезда!</string>
    <string name="password_rule_title">Пароль должен содержать</string>
    <string name="password_rule_1">Минимум 1 цифру</string>
    <string name="password_rule_2">Минимум 1 заглавную букву</string>
    <string name="password_rule_3">Минимум 1 специальный символ: "!@#$%^*-_=+"</string>
    <string name="password_rule_4">Мнимальная длина пароля - 8 символов</string>
    <string name="password_not_match">Пароли не совпадают</string>
    <string name="password_rule">Пароль должен содержать как минимум 1 цифру, 1 заглавную букву и
        1 специальный символ: "!@#$%^*-_=+"</string>
    <string name="password_new_hint">Новый пароль</string>
    <string name="password_confirm_hint">Подтвердите пароль</string>
    <string name="error_password_change">Ошибка смены пароля</string>
    <string name="password_changed_success">Пароль изменен</string>
    <string name="last_entries_header">Последние 20 номеров</string>
    <string name="number_symbol">№</string>
    <string name="worker_table_header">Работник</string>
    <string name="date_table_header">Дата</string>
    <string name="update_available">Доступно обновление</string>
    <string name="update">Обновить</string>
    <string name="new_version">Новая версия</string>
    <string name="loading">Загрузка</string>
    <string name="later">Позже</string>
    <string name="download_error">Ошибка при загрузке файла</string>
    <string name="choose_time">Введите время проверки</string>
    <string name="order_route">Участок проверки</string>
    <string name="order_other_params">Прочее</string>
    <string name="open">Открыть</string>
    <string name="train_scheme">Схема поезда</string>
    <string name="copy_train_depot">Копировать формирование состава поезда</string>
    <string name="add_worker_data">Внести данные работника</string>
    <string name="start_input_text">Начните ввод</string>
    <string name="search_violation">Поиск нарушения</string>
    <string name="choose_revision_type">Выберите тип проверки</string>
    <string name="is_rent">Аренда</string>
    <string name="doc_id">Номер удостоверения</string>
    <string name="add_violation">Добавить нарушение</string>
    <string name="coach_data">Сведения о вагоне</string>
    <string name="worker_data">Сведения о работнике</string>
    <string name="worker_position">Должность</string>
    <string name="clean_string">Очистить список</string>
    <string name="revision_start_description">Заполните все поля, добавьте работников и начните проверку</string>
    <string name="train_crew">Руководители поездной бригады</string>
    <string name="add_crew_description">Внесите руководителей объекта проверки</string>
    <string name="ask_train_scheme">Ввести схему поезда?</string>
</resources>