<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".ui.activities.StartMenu">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/startMenuLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/app_version_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/headerTitle"
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_text"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal30"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical70"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_revision_button"
                style="@style/MainGreenButton"
                android:text="@string/start_revision_text"
                app:icon="@drawable/ic_start_revision_32_white"
                app:iconGravity="top"
                app:iconPadding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical10"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal30" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_violation_catalog"
                style="@style/MainGreenButton"
                android:text="@string/violation_catalog_string"
                app:icon="@drawable/ic_list_24_white"
                app:iconGravity="top"
                app:iconPadding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical90"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal30" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/service_menu_button"
                style="@style/MainGreenButton"
                android:text="@string/service_menu_string"
                app:icon="@drawable/ic_tool_48_white"
                app:iconGravity="top"
                app:iconPadding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical10"
                app:layout_constraintTop_toBottomOf="@+id/start_revision_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exit_button"
                style="@style/MainGreenButton"
                android:text="@string/exit_text"
                app:icon="@drawable/ic_exit_24_white"
                app:iconGravity="top"
                app:iconPadding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical90"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintTop_toBottomOf="@+id/service_menu_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/help"
                style="@style/MainGreenButton"
                android:text="@string/help"
                app:icon="@drawable/ic_help_24_white"
                app:iconGravity="top"
                app:iconPadding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical90"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintTop_toBottomOf="@+id/open_violation_catalog" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/app_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>