<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ServiceMenuActivity">

    <ImageButton
        android:id="@+id/back_img_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/back_text"
        android:src="@drawable/ic_back_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/header_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_img_button"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    app:layout_constraintBottom_toTopOf="@+id/catalog_code_violation_search_text_input"-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clean_dirs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean_dir_string"
        app:icon="@drawable/ic_clear_data_24_white"
        app:iconGravity="top"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical50"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical10"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal30" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/load_catalog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_catalog_string"
        app:icon="@drawable/ic_catalog_24_white"
        app:iconGravity="top"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical90"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal30" />

</androidx.constraintlayout.widget.ConstraintLayout>